# cosmwasm-to-quint

./: .gitmodules  Cargo.toml  README.md  default.nix  rust-toolchain.toml
.github/workflows/: main.yml  rust.yml
examples/ctf-01/: Cargo.toml  README.md
examples/ctf-01/quint/: oaksecurity_cosmwasm_ctf_01_stubs.qnt  test.itf.json
examples/ctf-01/quint/lib/: bank.qnt  cw_types.qnt  messaging.qnt
examples/ctf-01/src/: contract.rs
examples/ctf-01/tests/: mbt_oaksecurity_cosmwasm_ctf_01.rs
src/: boilerplate.rs  lib.rs  nondet.rs  state_extraction.rs  translate.rs  types.rs  visitors.rs
src/quint-lib-files/: BoundedUInt.qnt  bank.qnt  basicSpells.qnt  cw_types.qnt  cw_utils.qnt  messaging.qnt
src/test_generation/: actions.rs  boilerplate.rs  mod.rs  structs.rs
tests/: integration_tests.rs
tests/snapshots/: integration_tests__ctf01.snap  integration_tests__ctf02.snap  integration_tests__ctf03.snap  integration_tests__ctf04.snap  integration_tests__ctf05.snap  integration_tests__ctf06.snap  integration_tests__ctf07.snap  integration_tests__ctf08.snap  integration_tests__ctf09.snap  integration_tests__ctf10.snap
